iac/layer-services/ingress-monitoring/ingress-ceph.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ceph-ui-ing
  namespace: rook-ceph
  annotations:
    traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
  labels:
    traffic-type: internal
spec:
  rules:
  - host: ceph.localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: rook-ceph-mgr-dashboard
          servicePort: 8443
