iac/layer-services/ingress-monitoring/ingress-consul.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: consul-ui-ing
  namespace: kube-system
  annotations:
    traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
  labels:
    traffic-type: internal
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-consul
          servicePort: 8500
